# employee-prediction-mlops

./: README.md  pyproject.toml  run_pipeline.py
.zen/: config.yaml
data/: preprocessed_data.csv
pipelines/: training_pipeline.py
src/: data_cleaning.py  data_divide.py  exploritory.ipynb
steps/: clean_and_split_data.py  define_model.py  evaluate_model.py  ingest_data.py  train_model.py
