[project]
name = "employee-prediction-mlops"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "zenml[server]>=0.60.0",
    "kaggle>=1.6.14",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
